
170926 Martin Mann :
 * IntaRNA/PredictorMfe4dSeed :
 * IntaRNA/PredictorMfe2dHeuristicSeed :
   + updateOptima() to disable predTracker updates when fillHybridE() of super
     class is called; 
     --> BUGFIX : so far resulting tracker profiles were a mix of non-seeded and
         seeded interactions and thus not complementary with the predicted
         interactions

version 2.0.4

170706 Martin Mann :
 * IntaRNA/OutputHandlerCsv :
   + E_hybrid : hybrid-only energy = E - ED1 - ED2
   + E_norm : length-normalized energy = E / ln( length1*length2 )
   + E_hybridNorm : length-normalized hybrid-only energy =  E_hybrid / ln(l1*l2)

170705 Martin Mann :
 * perl/Intarna*.pl :
   * shebang corrected (thanks to Patrick Wright)

170503 Martin Mann :
 * README.md :
   * output file description updated
   + description of easylogging++ initialization for library usage 
     (thanks to Maria Waldl) 
 * bin/CommandLineParsing :
   * getFullFilename() : 
     * bugfix : handling of paths in file name definitions
       (thanks to Milad Miladi)
     * sequence index now suffix of filename (added in front of file extension) 

version 2.0.3

170503 Martin Mann :
 * README.md :
   + OS X install instructions (thanks to Lars Barquist)
 + IntaRNA/NussinovHandler : (thanks to Mostafa Mahmoud) implementation of
   intramolecular structure prediction, partition function and probability
   computation using a variant of the Nussinov-Jacobson model
 * IntaRNA/AccessibilityBasePair :
   * uses NussinovHandler for computation
 * IntaRNA/InteractionEnergyBasePair :
   * uses NussinovHandler for computation
   + computeES() : fill a given ES value container
   * getES*() : enabled
 + tests for NussinovHandler 
 + tests for InteractionEnergyBasePair
 + doc/latex-deps : provides required doxygen-latex dependencies

170413 Martin Mann :
 * doc/* 
   + added to distribution build

170412 Martin Mann :
 * configure.ac :
   * doxygen docu generation now truely optional